[gd_scene load_steps=20 format=3 uid="uid://dxu0106ealx4o"]

[ext_resource type="Theme" uid="uid://crs0bbp4j2u2f" path="res://menu/main_theme.tres" id="1_2a6xn"]
[ext_resource type="Script" path="res://root/root_scene.gd" id="1_6lt17"]
[ext_resource type="PackedScene" uid="uid://b3tg0clcfwau4" path="res://components/main_scene.tscn" id="2_1st06"]
[ext_resource type="PackedScene" uid="uid://dcmiifvp1ol6o" path="res://root/music_layer.tscn" id="2_jv58k"]
[ext_resource type="Texture2D" uid="uid://b4bidx65l83r1" path="res://art/buttons/play1.png" id="4_bm678"]
[ext_resource type="Script" path="res://root/Label.gd" id="5_561hi"]
[ext_resource type="Texture2D" uid="uid://bg3soxe7e0r1y" path="res://art/buttons/play2.png" id="5_tkf1p"]
[ext_resource type="Texture2D" uid="uid://btyx22qka6fjc" path="res://art/buttons/play3.png" id="6_0vnu2"]
[ext_resource type="Texture2D" uid="uid://ole0h0rby1sc" path="res://art/death_screen.png" id="6_mcon7"]
[ext_resource type="Texture2D" uid="uid://dym25kicx6dd0" path="res://art/sky2_color_MAP (1).png" id="6_pjpi0"]
[ext_resource type="Texture2D" uid="uid://djeg3hm6okl2t" path="res://art/buttons/retry1.png" id="7_21o1e"]
[ext_resource type="Texture2D" uid="uid://c824k2ijbnb5m" path="res://art/buttons/retry2.png" id="8_nbfle"]
[ext_resource type="Texture2D" uid="uid://cmpldvo3yjfs6" path="res://art/buttons/retry3.png" id="9_k8ffv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2kb6w"]
texture = ExtResource("4_bm678")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vbob7"]
texture = ExtResource("5_tkf1p")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fdifm"]
texture = ExtResource("6_0vnu2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ghd6g"]
texture = ExtResource("9_k8ffv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vf0l2"]
texture = ExtResource("7_21o1e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_saon4"]
texture = ExtResource("8_nbfle")

[node name="RootScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2a6xn")
script = ExtResource("1_6lt17")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="MainScene" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_1st06")]

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UiLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="Control" parent="UiLayer/Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_2a6xn")

[node name="Button" type="Button" parent="UiLayer/Control/Menu"]
layout_mode = 0
offset_left = 375.0
offset_top = 168.0
offset_right = 461.0
offset_bottom = 252.0
scale = Vector2(4.22964, 3.51939)
theme_override_styles/normal = SubResource("StyleBoxTexture_2kb6w")
theme_override_styles/hover = SubResource("StyleBoxTexture_vbob7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fdifm")

[node name="GameUi" type="Control" parent="UiLayer/Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UiLayer/Control/GameUi"]
texture_filter = 1
layout_mode = 0
offset_left = 29.0
offset_top = 23.0
offset_right = 71.0
offset_bottom = 46.0
scale = Vector2(2, 2)
text = "0"
script = ExtResource("5_561hi")

[node name="Death" type="Control" parent="UiLayer/Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Retry" type="Button" parent="UiLayer/Control/Death"]
z_index = 200
layout_mode = 0
offset_left = 495.0
offset_top = 299.0
offset_right = 649.0
offset_bottom = 398.0
theme_override_styles/normal = SubResource("StyleBoxTexture_ghd6g")
theme_override_styles/hover = SubResource("StyleBoxTexture_vf0l2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_saon4")

[node name="Sprite2D2" type="Sprite2D" parent="UiLayer/Control/Death"]
position = Vector2(572, 296)
scale = Vector2(5, 5)
texture = ExtResource("6_pjpi0")

[node name="Sprite2D" type="Sprite2D" parent="UiLayer/Control/Death"]
texture_filter = 1
position = Vector2(576, 261)
scale = Vector2(2, 2)
texture = ExtResource("6_mcon7")

[node name="music_layer" parent="." instance=ExtResource("2_jv58k")]

[connection signal="pressed" from="UiLayer/Control/Menu/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UiLayer/Control/Death/Retry" to="." method="_on_retry_pressed"]
